<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin3"
    android:layout_marginEnd="@dimen/margin3"
    android:orientation="vertical"
    android:padding="@dimen/margin5">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card">

            <LinearLayout
                android:id="@+id/bagian1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin3"
                android:layout_toStartOf="@id/btn_delete"
                android:gravity="start"
                android:padding="@dimen/margin5">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/margin10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin5"
                        android:text="@string/nama"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/tv_noHp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin3"
                        android:drawablePadding="@dimen/margin5"
                        android:maxLength="13"
                        android:text="@string/noHP"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:drawableStartCompat="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/tv_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin5"
                        android:text="@string/alamat"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:drawableStartCompat="@drawable/ic_location" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/size35"
                android:layout_height="@dimen/size35"
                android:layout_above="@+id/view1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="@dimen/margin3"
                android:background="@drawable/ic_delete"
                android:contentDescription="@string/btn" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_below="@id/bagian1"
                android:layout_marginStart="@dimen/margin85"
                android:layout_marginEnd="@dimen/margin17"
                android:layout_marginBottom="@dimen/margin7"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>